--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nike",
+  "name": "gfgviit",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
     "start": "vite",
