--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "swiper": "^10.3.1",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
