--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/lab": "^5.0.0-alpha.149",
+    "@mui/material": "^5.14.14",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.2",
     "aos": "^2.3.4",
     "framer-motion": "^4.1.17",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "styled-components": "^6.1.0",
     "swiper": "^10.3.1",
     "typewriter-effect": "^2.21.0"
   },
